--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,8 @@ requirements:
     - pango
     - xorg-libxt
     - pgplot
-    - hdf5 >=1.12.0
+    - hdf5
+    - hdf5-static  # [osx]
     - xorg-libx11
     - xorg-xproto
     - fftw
@@ -52,7 +53,8 @@ requirements:
     - pango
     - xorg-libxt
     - pgplot
-    - hdf5 >=1.12.0
+    - hdf5
+    - hdf5-static  # [osx]
     - fftw
     - lapack
     - lapack95
