--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - autoconf
     - libtool
     - m4
-    - pkg-config   # [osx]
+    - pkg-config
     - llvm-openmp  # [osx]
     - libgomp      # [linux]
   host:
