--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,8 @@ requirements:
     - blas
     - lapack
     - lapack95
-    - gsl =2.5
+    - gsl ==2.6
+    - fgsl
     - xraylib
   run:
     - readline
@@ -58,7 +59,8 @@ requirements:
     - fftw
     - lapack
     - lapack95
-    - gsl =2.5
+    - gsl ==2.6
+    - fgsl
     - xraylib
     - xorg-libx11
     - xorg-xproto
