Fix syntax issue.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,14 +1,14 @@
 {% set name = "bmad" %}
 {% set version = "20210923-0" %}
-{% set major = {{ version }}.split("-")[0] %}
-{% set minor = {{ version }}.split("-")[1] %}
+{% set major = version.split("-")[0] %}
+{% set minor = version.split("-")[1] %}
 
 package:
   name: {{ name|lower }}
   version: {{ version | replace("-", ".") }}
 
 source:
-  url: https://github.com/bmad-sim/bmad_distribution/releases/download/{{ version }}/bmad_dist_{{ version[:-4] }}_{{ major[-4:] }}-{{ minor }}.tgz
+  url: https://github.com/bmad-sim/bmad_distribution/releases/download/{{ version }}/bmad_dist_{{ major[:-4] }}_{{ major[-4:] }}-{{ minor }}.tgz
   sha256: 9a7c9570b48a861ea28f839c8230d26c1437308ba9a924f5308e63769f256472
 
 build:
