--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,6 +3,15 @@
 {% set major = version.split("-")[0] %}
 {% set minor = version.split("-")[1] %}
 
+{% set build = 0 %}
+# ensure mpi is defined (needed for conda-smithy recipe-lint)
+{% set mpi = mpi or 'nompi' %}
+
+{% if mpi == 'nompi' %}
+# prioritize nompi variant via build number
+{% set build = build + 100 %}
+{% endif %}
+
 package:
   name: {{ name|lower }}
   version: {{ version | replace("-", ".") }}
@@ -12,8 +21,27 @@ source:
   sha256: 601594c4fd49bfc3c0d007563a242fc3f82dc54916e5d66f3f7f3968bd80343e
 
 build:
-  number: 0
+  number: {{ build }}
   skip: true  # [win]
+
+  # add build string so packages can depend on
+  # mpi or nompi variants explicitly:
+  # `pkg * mpi_mpich_*` for mpich
+  # `pkg * mpi_*` for any mpi
+  # `pkg * nompi_*` for no mpi
+
+  {% if mpi != 'nompi' %}
+  {% set mpi_prefix = "mpi_" + mpi %}
+  {% else %}
+  {% set mpi_prefix = "nompi" %}
+  {% endif %}
+  string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
+
+  {% if mpi != 'nompi' %}
+
+  run_exports:
+    - {{ name }} * {{ mpi_prefix }}_*
+  {% endif %}  
 
 requirements:
   build:
@@ -29,6 +57,7 @@ requirements:
     - pkg-config
     - llvm-openmp  # [osx]
     - libgomp      # [linux]
+    - openmpi  # [mpi == "openmpi" and (build_platform != target_platform)]    
   host:
     - readline
     - ncurses
@@ -46,6 +75,7 @@ requirements:
     - gsl ==2.6
     - fgsl
     - xraylib
+    - {{ mpi }}  # [mpi != 'nompi']    
   run:
     - readline
     - ncurses
@@ -65,6 +95,7 @@ requirements:
     - xorg-xproto
     - libopenblas
     - libcblas
+    - {{ mpi }}  # [mpi != 'nompi']    
 
 test:
   commands:
