--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,6 +53,7 @@ requirements:
     - automake
     - autoconf
     - libtool
+    - libglib
     - m4
     - pkg-config
     - llvm-openmp  # [osx]
