--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,8 @@ package:
 source:
   url: https://github.com/bmad-sim/bmad_distribution/releases/download/{{ version }}/bmad_dist_{{ major[:-4] }}_{{ major[-4:] }}-{{ minor }}.tgz
   sha256: ecaa4ea4f46ed1b070f9df75404bb36b90a8ee807a6b677f73060947b2fa4351
+  patches:
+    - 0001-cmake_args.patch
 
 build:
   number: {{ build }}
