add python in build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,7 +60,8 @@ requirements:
     - pkg-config
     - llvm-openmp  # [osx]
     - libgomp      # [linux]
-    - openmpi  # [mpi == "openmpi" and (build_platform != target_platform)]     
+    - openmpi  # [mpi == "openmpi" and (build_platform != target_platform)]   
+    - python  
   host:
     - readline
     - ncurses
