--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -107,7 +107,7 @@ about:
   home: https://www.classe.cornell.edu/bmad
   license: GPL-3.0-or-later
   license_family: GPL
-  license_file: bmad/Copyright
+  license_file: bmad-ecosystem/bmad/Copyright
   summary: Bmad is an object oriented, open source, subroutine library for relativistic charged-particle dynamics simulations in accelerators and storage rings.
   description: |
     Bmad has been developed at Cornell University's Laboratory for Elementary
