--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,6 @@ package:
 source:
   url: https://github.com/bmad-sim/bmad-ecosystem/releases/download/{{ version }}/bmad_dist.tar.gz
   sha256: 29ac435d9ba48325515cecf1472c202ebc8f06849a4faad91dec5b2cc44a58f9
-  patches:
-    - 0001-cmake_args.patch
 
 build:
   number: {{ build }}
@@ -107,7 +105,7 @@ about:
   home: https://www.classe.cornell.edu/bmad
   license: GPL-3.0-or-later
   license_family: GPL
-  license_file: bmad-ecosystem/bmad/Copyright
+  license_file: bmad/Copyright
   summary: Bmad is an object oriented, open source, subroutine library for relativistic charged-particle dynamics simulations in accelerators and storage rings.
   description: |
     Bmad has been developed at Cornell University's Laboratory for Elementary
