--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "bmad" %}
 {% set version = "20230929-0" %}
 
-{% set build = 0 %}
+{% set build = 1 %}
 # ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 
@@ -28,17 +28,23 @@ build:
   # `pkg * mpi_*` for any mpi
   # `pkg * nompi_*` for no mpi
 
+  {% if build_type == "debug" %}
+  {% set debug = "_debug" %}
+  {% else %}
+  {% set debug = "" %}
+  {% endif %}
+
   {% if mpi != 'nompi' %}
   {% set mpi_prefix = "mpi_" + mpi %}
   {% else %}
   {% set mpi_prefix = "nompi" %}
   {% endif %}
-  string: {{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}
+
+  string: {{ mpi_prefix }}{{ debug }}_h{{ PKG_HASH }}_{{ build }}
 
   {% if mpi != 'nompi' %}
-
   run_exports:
-    - {{ name }} * {{ mpi_prefix }}_*
+    - {{ name }} * {{ mpi_prefix }}{{ debug }}_*
   {% endif %}
 
 requirements:
