--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,7 +70,7 @@ requirements:
     - cairo
     - pango
     - xorg-libxt
-    - pgplot
+    - plplot
     - hdf5
     - xorg-libx11
     - xorg-xproto
@@ -88,7 +88,7 @@ requirements:
     - cairo
     - pango
     - xorg-libxt
-    - pgplot
+    - plplot
     - hdf5
     - fftw
     - libblas
