--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "bmad" %}
 {% set version = "20231221-0" %}
 
-{% set build = 0 %}
+{% set build = 1 %}
 # ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 
@@ -70,8 +70,7 @@ requirements:
     - cairo
     - pango
     - xorg-libxt
-    - plplot
-    - glib
+    - pgplot
     - hdf5
     - xorg-libx11
     - xorg-xproto
@@ -89,8 +88,7 @@ requirements:
     - cairo
     - pango
     - xorg-libxt
-    - plplot
-    - glib
+    - pgplot
     - hdf5
     - fftw
     - libblas
