--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "bmad" %}
 {% set version = "20240504-5" %}
 
-{% set build = 0 %}
+{% set build = 1 %}
 # ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 
@@ -79,7 +79,7 @@ requirements:
     - libblas
     - liblapack
     - lapack95
-    - gsl ==2.6
+    - gsl
     - fgsl
     - xraylib
     - {{ mpi }}  # [mpi != 'nompi']
@@ -95,7 +95,7 @@ requirements:
     - libblas
     - liblapack
     - lapack95
-    - gsl ==2.6
+    - gsl
     - fgsl
     - xraylib
     - xorg-libx11
