--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "bmad" %}
 {% set version = "20240504-5" %}
 
-{% set build = 0 %}
+{% set build = 1 %}
 # ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 
@@ -64,7 +64,7 @@ requirements:
     - llvm-openmp  # [osx]
     - libgomp      # [linux]
     - openmpi  # [mpi == "openmpi" and (build_platform != target_platform)]
-    - python *
+    - python
   host:
     - readline
     - ncurses
@@ -76,7 +76,8 @@ requirements:
     - xorg-libx11
     - xorg-xproto
     - fftw
-    - libblas
+    - libopenblas
+    - libcblas
     - liblapack
     - lapack95
     - gsl ==2.6
@@ -84,24 +85,10 @@ requirements:
     - xraylib
     - {{ mpi }}  # [mpi != 'nompi']
   run:
-    - readline
-    - ncurses
-    - cairo
-    - pango
-    - xorg-libxt
     - pgplot
-    - hdf5
-    - fftw
-    - libblas
-    - liblapack
     - lapack95
-    - gsl ==2.6
     - fgsl
-    - xraylib
-    - xorg-libx11
     - xorg-xproto
-    - libopenblas
-    - libcblas
     - {{ mpi }}  # [mpi != 'nompi']
 
 test:
