--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,19 +21,6 @@ source:
 build:
   number: {{ build }}
 
-{% set desc = "Bmad has been developed at Cornell University's Laboratory for Elementary "
-              "Particle Physics and has been in use since the mid 1990s. "
-              "Bmad has a wide range of routines to do many things. "
-              "Bmad can be used to study both single and multi-particle "
-              "beam dynamics. It has routines to track both particles and "
-              "macroparticles. Bmad has various tracking algorithms including "
-              "Runge-Kutta and symplectic (Lie algebraic) integration. "
-              "Wakefields, and radiation excitation and damping can be simulated. "
-              "Bmad has routines for calculating transfer matrices, emittances, "
-              "Twiss parameters, dispersion, coupling, etc. "
-%}
-
-
 outputs:
   - name: bmad
     build:
@@ -117,7 +104,15 @@ outputs:
       license_family: GPL
       license_file: bmad/Copyright
       summary: Bmad is an object oriented, open source, subroutine library for relativistic charged-particle dynamics simulations in accelerators and storage rings.
-      description: {{ desc }}
+      description: |
+        Bmad has been developed at Cornell University's Laboratory for
+        Elementary Particle Physics and has been in use since the mid 1990s. Bmad has a
+        wide range of routines to do many things. Bmad can be used to study both single
+        and multi-particle beam dynamics. It has routines to track both particles and
+        macroparticles. Bmad has various tracking algorithms including Runge-Kutta and
+        symplectic (Lie algebraic) integration. Wakefields, and radiation excitation
+        and damping can be simulated. Bmad has routines for calculating transfer
+        matrices, emittances, Twiss parameters, dispersion, coupling, etc.
       doc_url: https://www.classe.cornell.edu/bmad/manual.html
 
   - name: bmad-doc
@@ -138,7 +133,15 @@ outputs:
       license_family: GPL
       license_file: bmad/Copyright
       summary: Bmad is an object oriented, open source, subroutine library for relativistic charged-particle dynamics simulations in accelerators and storage rings.
-      description: {{ desc }}
+      description: |
+        Bmad has been developed at Cornell University's Laboratory for
+        Elementary Particle Physics and has been in use since the mid 1990s. Bmad has a
+        wide range of routines to do many things. Bmad can be used to study both single
+        and multi-particle beam dynamics. It has routines to track both particles and
+        macroparticles. Bmad has various tracking algorithms including Runge-Kutta and
+        symplectic (Lie algebraic) integration. Wakefields, and radiation excitation
+        and damping can be simulated. Bmad has routines for calculating transfer
+        matrices, emittances, Twiss parameters, dispersion, coupling, etc.
       doc_url: https://www.classe.cornell.edu/bmad/manual.html
 
 about:
@@ -147,7 +150,15 @@ about:
   license_family: GPL
   license_file: bmad/Copyright
   summary: Bmad is an object oriented, open source, subroutine library for relativistic charged-particle dynamics simulations in accelerators and storage rings.
-  description: {{ desc }}
+  description: |
+    Bmad has been developed at Cornell University's Laboratory for Elementary
+    Particle Physics and has been in use since the mid 1990s. Bmad has a wide range
+    of routines to do many things. Bmad can be used to study both single and
+    multi-particle beam dynamics. It has routines to track both particles and
+    macroparticles. Bmad has various tracking algorithms including Runge-Kutta and
+    symplectic (Lie algebraic) integration. Wakefields, and radiation excitation
+    and damping can be simulated. Bmad has routines for calculating transfer
+    matrices, emittances, Twiss parameters, dispersion, coupling, etc.
   doc_url: https://www.classe.cornell.edu/bmad/manual.html
 
 extra:
