--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,37 +21,39 @@ source:
 build:
   number: {{ build }}
 
-# add build string so packages can depend on
-# mpi or nompi variants explicitly:
-# `pkg * mpi_mpich_*` for mpich
-# `pkg * mpi_*` for any mpi
-# `pkg * nompi_*` for no mpi
-
-{% if build_type == "debug" %}
-{% set debug = "_debug" %}
-{% else %}
-{% set debug = "" %}
-{% endif %}
-
-{% if mpi != 'nompi' %}
-{% set mpi_prefix = "mpi_" + mpi %}
-{% else %}
-{% set mpi_prefix = "nompi" %}
-{% endif %}
-
 outputs:
   - name: bmad
     build:
       skip: true  # [win]
+
+      # add build string so packages can depend on
+      # mpi or nompi variants explicitly:
+      # `pkg * mpi_mpich_*` for mpich
+      # `pkg * mpi_*` for any mpi
+      # `pkg * nompi_*` for no mpi
+
+      {% if build_type == "debug" %}
+      {% set debug = "_debug" %}
+      {% else %}
+      {% set debug = "" %}
+      {% endif %}
+
+      {% if mpi != 'nompi' %}
+      {% set mpi_prefix = "mpi_" + mpi %}
+      {% else %}
+      {% set mpi_prefix = "nompi" %}
+      {% endif %}
+
       string: {{ mpi_prefix }}{{ debug }}_h{{ PKG_HASH }}_{{ build }}
       {% if mpi != 'nompi' %}
       run_exports:
         - {{ name }} * {{ mpi_prefix }}{{ debug }}_*
       {% endif %}
+
     requirements:
       build:
         - {{ compiler('c') }}
-        - {{ stdlib("c") }}
+        - {{ stdlib('c') }}
         - {{ compiler('cxx') }}
         - {{ compiler('fortran') }}
         - cmake
@@ -96,7 +98,10 @@ outputs:
         - tao -help  # [build_platform == target_platform]
   - name: bmad-doc
     build:
-      string: h{{ PKG_HASH }}_{{ build }}
+      noarch: python
+    requirements:
+      host:
+        - python
     script: bmad-doc_build.sh
     files:
       - $PREFIX/share/bmad
