--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ outputs:
       host:
         - python
     files:
-      - share
+      - share/bmad
     test:
       commands:
         - find $PREFIX/share -type d  # [unix]
