--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "bmad" %}
 {% set version = "20240923-0" %}
 
-{% set build = 0 %}
+{% set build = 1 %}
 # ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 
@@ -76,7 +76,8 @@ requirements:
     - xorg-libx11
     - xorg-xproto
     - fftw
-    - libopenblas
+    - libopenblas 0.3.27  # [osx]
+    - libopenblas         # [linux]
     - libcblas
     - liblapack
     - lapack95
