--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -72,7 +72,7 @@ requirements:
     - pango
     - xorg-libxt
     - pgplot
-    - hdf5 {{ hdf5 }}
+    - hdf5 {{ hdf5 }} {{ mpi_prefix }}*
     - xorg-libx11
     - xorg-xproto
     - fftw
