FIX: install libacl during build process to avoid issue
Seen during 'creating gfortran link' stage:

```
cp: relocation error: /lib64/libacl.so.1: symbol getxattr, version ATTR_1.0 not defined in file libattr.so.1 with link time reference
```

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,6 +58,7 @@ requirements:
     - automake
     - autoconf
     - gnuconfig   # [unix]
+    - libacl       # [linux]
     - libtool
     - m4
     - pkg-config
