--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,5 +4,5 @@ mpi:
 hdf5:
   - 1.14.4
   - 1.14.6
-fortran_compiler_version: # [osx and arm64]
-  - 13 # [osx and arm64]
+fortran_compiler_version: # [osx]
+  - 13 # [osx]
