--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,11 +41,14 @@ build:
   {% set mpi_prefix = "nompi" %}
   {% endif %}
 
+  # string: {{ mpi_prefix }}{{ debug }}_h{{ PKG_HASH }}_{{ build }}
   string: {{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}
+
+  {% if mpi != 'nompi' %}
   run_exports:
-    # Bmad does not follow semver, and aside from the Tao C interface, most of its ABI is not stable.
-    # Compiled dependencies of bmad should use the exact version.
-    - {{ pin_subpackage('bmad', exact=True) }}
+    - {{ name }} * {{ mpi_prefix }}_*
+    # - {{ name }} * {{ mpi_prefix }}{{ debug }}_*
+  {% endif %}
 
 requirements:
   build:
